# tmuxagent

./: .gitignore  2025-09-23-mntdprojectstmuxagentdocsguide20250923md.txt  Codex 双通道（官方 + GAC）配置与使用说明.md  README.md  agent-config.yaml  agents.md  debug_codex_network.sh  enhance_notifications.py  final_test.py  notification_integration_guide.md  pyproject.toml  requirements.txt  setup_wecom.sh  stability_test_monitor.sh  staging-policy.yaml  staging-policy.yaml.backup  test_webhook_simple.py  test_wecom.py  tmuxagent v2.0 源码分析.md
.tmuxagent/: fleet.toml  orchestrator.toml
.tmuxagent/prompts/: command.md  command_delegate.md  summary.md
.tmuxagent/templates/: ci-hardening.md  deploy-resilience.md  orchestrator.md  qa-template.md  tts-implementation.md
configs/: hosts.example.yaml
docs/: README.md  chatgptanswer0926.md  chatgptdeepresearchVisualizationReport.md  code_review_report_2025_09_26.md  dashboard_claude_integration.md  dashboard_deployment.md  dashboard_implementation_plan.md  dashboard_operations.md  dashboard_technical_review.md  dashboard_usage.md  dashboard_ux_overhaul.md  development_plan.md  e2e_test_report.md  guide20250923.md  guide20250923_review_dissenting_opinions.md  nas_e2e_test_report_2025_09_24.md  orchestrator_ai_development_test_report.md  orchestrator_code_analysis_report.md  orchestrator_monitoring.md  orchestrator_next_steps.md  orchestrator_real_world_test_plan.md  orchestrator_real_world_test_report.md  orchestrator_roadmap_stage6.md  orchestrator_vs_requirements_gap_analysis.md  pr_review_dashboard_implementation.md  real_world_testing.md  storyapp_comprehensive_test_plan.md  storyapp_orchestrator_comprehensive_validation_report.md  storyapp_orchestrator_delegate_validation_report.md  storyapp_orchestrator_final_validation_report.md  storyapp_orchestrator_validation_detailed_report.md  storyapp_orchestrator_validation_plan.md  storyapp_orchestrator_validation_report.md  storyapp_orchestrator_validation_report_updated.md  storyapp_test_execution_report.md  test_report_2025_09_24.md  testing.md  testinstruction.md  visual_dashboard_plan.md  visualization_panel_research.md  (+3 more)
examples/: hosts.example.yaml  policy.example.yaml  policy.example.yaml.backup
policies/: default.yaml
prompts/: command.md  stuck_detection.md
scripts/: codex_deepseek_cli.py  diagnose_orchestrator.sh  register_session.py  run_orchestrator_guard.py  run_portal.py  send_bus_command.py  setup_wecom_webhook.py  smart_wrapper.py  smart_wrapper.sh  summarize_pane.sh  wecom_proxy_client.py  wecom_proxy_server.py  wecom_smoke_test.py
src/tmux_agent/: agent_cli.py  approvals.py  bus_server.py  config.py  constants.py  local_bus.py  main.py  metrics.py  notify.py  notify_bridge.py  orchestrator_cli.py  parser.py  policy.py  runner.py  state.py  tmux.py
src/tmux_agent/agents/: __init__.py  config.py  service.py  session.py  templates.py  worktree.py
src/tmux_agent/dashboard/: __init__.py  analyzer.py  app.py  cli.py  config.py  data.py  panes.py  summary.py
src/tmux_agent/dashboard/templates/: index.html  panes.html
src/tmux_agent/orchestrator/: __init__.py  codex_client.py  config.py  decomposer.py  insights.py  replay.py  service.py
templates/orchestrator/: command.md  milestone_notifications.md  summary.md
tests/: conftest.py  test_agent_cli.py  test_agents_session.py  test_agents_templates.py  test_agents_worktree.py  test_approvals.py  test_bus_server.py  test_codex_client.py  test_dashboard.py  test_decomposer.py  test_integration.py  test_notify.py  test_notify_bridge.py  test_orchestrator.py  test_parser.py  test_policy_engine.py  test_runner.py  test_state_store.py
tmux_sentry/: __init__.py  approval.py  config.py  external.py  main.py  notify.py  parser.py  state.py  tmux_client.py
